--- a/index.html
+++ b/index.html
@@ -23,5 +23,42 @@
 <p>
     *note: the readings may not always be accurate.
 </p>
+<h6>
+    <em>scroll down for responsive window</em>
+</h6>
+
+</body>
+<body>
+   <div id="end__of__page" class="centered">
+    <div class="row">
+        <div class="logo">
+            <a href="https://www.youtube.com/channel/UC-ujo_DFU0AmaGTKDr7hBoA" target="_blank">
+                <img src="images/youtube.png" alt="youtube logo" data-aos="fade-left" class="logo__image">
+            </a>
+        </div>
+        <div class="logo">
+            <a href="https://twitter.com/FSCentralYT" target="_blank">
+                <img src="images/twitter.png" alt="twitter logo" data-aos="zoom-in" class="logo__image">
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="logo">
+            <a href="https://github.com/FlightSimCentral/airspot-app" target="_blank">
+                <img src="images/github.png" alt="github logo" data-aos="zoom-out" class="logo__image">
+            </a>
+        </div>
+    </div>
+</div>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init(
+    {
+        once: false,
+        mirror: true,
+        anchorPlacement: 'top-bottom',
+        offset: 0,
+        duration: 800
+    });</script> 
 </body>
 </html>  
