--- a/loadingscreen.html
+++ b/loadingscreen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airspot</title>
+    <title>Starting Airspot...</title>
     <link rel="shortcut icon" type="image/png" href="/Images/logo.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
