--- a/contribute.html
+++ b/contribute.html
@@ -14,6 +14,7 @@
 <body>
     <h1 class="contribute">Want to contribute to the project?</h1>
     <h1 class="links__below">Check out the links below!</h1>
+    <p class="scroll__down">*press on the images and they will lead you to the corresponding page.</p>
     <div id="end__of__page" class="centered">
         <div class="row">
             <div class="logo">
