--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 <h6>
     *scroll down for responsive window
 </h6>
-
+<a href="/contributeloadingscreen.html" class="link_to_contributing_page"><img src="/Images/contribute_button.png" alt="contribute button"></a>
 </body> 
 </html>  
