--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     Airspot Lens
 </h1>
 <body>
+  <a href="/contributeloadingscreen.html"><img src="/Images/contribute_button.png" alt="contribute button"></a>
 <p>
     *note: the readings may not always be accurate.
 </p>
 <h6>
-    *scroll down for responsive window
+    *scroll down for responsive window. Please give the window a moment to load.
 </h6>
-<a href="/contributeloadingscreen.html" class="link_to_contributing_page"><img src="/Images/contribute_button.png" alt="contribute button"></a>
 </body> 
 </html>  
