--- a/contributeloadingscreen.html
+++ b/contributeloadingscreen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transferring you...</title>
+    <title>Redirecting you...</title>
     <link rel="shortcut icon" type="image/png" href="/Images/logo.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <div id="loader">
         <div id="shadow"></div>
         <div id="box"></div>
-        <div id="airspot__starting">Transferring you...</div>
+        <div id="airspot__starting">Redirecting you...</div>
       </div>
       <h4></h4>
       <meta http-equiv = "refresh" content = "3; url = /contribute.html" />
