--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Airspot Lens</title>
+    <title>Starting Airspot...</title>
     <link rel="shortcut icon" type="image/png" href="/Images/logo.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/loader.css">
 </head>
-<html>
-<script src="/JavaScript/p5.min.js"></script>
-<script src="/JavaScript/p5.dom.min.js"></script>
-<script src="/JavaScript/ml5.min.js" type="text/javascript"></script>
-<script src="/JavaScript/sketch.js"></script>
-<h1>
-    Airspot Lens
-</h1>
 <body>
-  <a href="/contributeloadingscreen.html"><img src="/Images/contribute_button.png" alt="contribute button"></a>
-<p>
-    *note: the readings may not always be accurate.
-</p>
-<h6>
-    *scroll down for responsive window. Please give the window a moment to load.
-</h6>
-</body> 
-</html>  
+    <div id="loader">
+        <div id="shadow"></div>
+        <div id="box"></div>
+        <div id="airspot__starting">Starting Airspot...</div>
+      </div>
+      <h4></h4>
+      <meta http-equiv = "refresh" content = "3; url = /home.html" />
+</body>
+</html>
