--- a/home.html
+++ b/home.html
@@ -20,12 +20,23 @@
     Airspot Lens
 </h1>
 <body>
-  <a href="/contributeloadingscreen.html"><img src="/Images/contribute_button.png" alt="contribute button"></a>
-<p>
+<div class="logo"
+    <a href="/contributeloadingscreen.html"><img src="/Images/contribute_button.png" alt="contribute button"></a>
+</div>
+  <p>
     *note: the readings may not always be accurate.
 </p>
 <h6>
     *scroll down for responsive window. Please give the window a moment to load.
 </h6>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>AOS.init(
+    {
+        once: false,
+        mirror: true,
+        anchorPlacement: 'top-bottom',
+        offset: 0,
+        duration: 800
+    });</script>
 </body> 
 </html>  
