added how it works page
also added loading page for it

--- a/home.html
+++ b/home.html
@@ -21,8 +21,9 @@
 </h1>
 <body>
 <a href="/contributeloadingscreen.html"><img src="/Images/contribute_button.png" alt="contribute button"></a>
+<a href="/howitworksloadingscreen.html"><img src="/Images/howitworkstouse.png" alt="how it works/to use button"></a>
   <p>
-    *note: the readings may not always be accurate.
+    Note: the readings may not always be accurate.
 </p>
 <h6>
     *scroll down for responsive window. Please give the window a moment to load.
