added back to home page button
added back to home page button

--- a/howitworks.html
+++ b/howitworks.html
@@ -36,5 +36,6 @@
     <h3>
         Thats all there is too it!
     </h3>
+    <a href="/backhomeloadingscreen.html"><img src="/Images/backhome.png" alt="back home button"></a>
 </body>
 </html>
