--- a/contribute.html
+++ b/contribute.html
@@ -35,6 +35,7 @@
                 </a>
             </div>
         </div>
+        <a href="/backhomeloadingscreen.html"><img src="/Images/backhome.png" alt="back home button"></a>
     </div>
     
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
